fixed issue of horizontal scrolling

--- a/package/src/app/globals.css
+++ b/package/src/app/globals.css
@@ -179,7 +179,7 @@ button {
     color: #fff !important;
 }
 
-body {
+html,body {
     overflow-x: hidden!important;
     width:100%;
     padding:0;
